# UVa_Challenge

./: CMakeLists.txt  README.md
UVa_00100 The 3n+1 problem/: CMakeLists.txt  UVa_00100.cpp
UVa_00118 Mutant Flatworld Explorers/: CMakeLists.txt  UVa_00118.cpp
